[project]
name = "cast-api"
version = "0.0.1"
description = "xhs-clone backend API · FastAPI + SQLAlchemy + sqlite/postgres"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.6.1",
    "sqlalchemy==2.0.49",
    "alembic==1.18.4",
    "python-multipart==0.0.27",
    "httpx==0.28.1",
    "oss2==2.19.1",
    "psycopg[binary]==3.3.4",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cast_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
